# axum-vite

./: Cargo.toml
axum-vite/: Cargo.toml
axum-vite/src/: error.rs  handlers.rs  lib.rs  loader.rs  manifest.rs  template.rs
example/frontend/: pnpm-lock.yaml  vite.config.ts
example/frontend/src/: App.tsx
