[package]
name = "axum-vite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["fs"] }
pin-project-lite = { version = "0.2" }
