[package]
name = "axum-vite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["fs"] }
async-trait = { version = "0.1" }
thiserror = "1"
serde_json = { version = "1" }

# fairy-render = { git = "ssh://git@github.com/kildevaeld/bette-rs.git" }
